examples/test/testpolicy6235.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6235
  namespace: namespace102
spec:
  podSelector:
    matchLabels:
      key32: value46
      key10: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value28
          key12: value49
          key0: value14
      podSelector:
        matchLabels:
          key5: value14
          key49: value38
          key10: value38
